fixed alignment on footer

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -321,13 +321,13 @@ main .range {
 footer {
     background-size: cover;
  	box-shadow:2px 2px 18px rgba(0,0,0,0.3);
-    margin:50px 0 -5px;
+ 	padding:50px 0;
 }
 
 footer p {
-    padding:30px 0 20px 50px;
-    font-size:12px;
+    margin-left: 5rem;
 }
+
 footer {
   background: linear-gradient(#131313e1, #181818e1),
     url('/images/sunshiney-indonesian-valley-filled-with-rice-paddies.jpg')
@@ -342,7 +342,7 @@ footer {
 
 footer p,
 footer ul li a {
-  font-size: 0.8em;
+  font-size: 0.8rem;
   color: rgb(214, 214, 214);
   text-transform: capitalize;
 }
@@ -355,7 +355,7 @@ footer ul li {
 footer h6 {
   text-transform: uppercase;
   margin-bottom: 30px;
-  margin-left: 10px;
+  margin-left: 5rem;
 
 }
 
@@ -371,4 +371,6 @@ footer p strong {
 .row{
     display: flex;
 }
-
+.social-icons{
+    margin-left: 5rem;
+}
